[package]
name = "laintrace"
version = "0.1.0"
edition = "2021"
authors = ["_relsa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.3"
nix = { git = "https://github.com/pmalmgren/nix", branch = "tracepath-enabled" }
# nix = { path = "../nix" }
libc = "0.2"